# DeathStarBench

./: .gitmodules
socialNetwork/: .gitignore  MyDockerfile  docker-compose.yml  install-deps.sh  social_network.thrift
socialNetwork/MyServices/: .gitignore  CMakeLists.txt  busy.py  social_network.thrift
socialNetwork/MyServices/Helpers/: benchmarking.cpp  commons.h
socialNetwork/MyServices/MyUrlShortenService/: CMakeLists.txt  MyUrlShortenClient.cpp  MyUrlShortenHandler.h  MyUrlShortenServer.cpp  TestUrlShorten.py  UrlProcessor.cpp
socialNetwork/MyServices/flexus/: flexus.h  magic_inst.h
socialNetwork/MyServices/gen-cpp/: MyUrlShortenService.cpp  MyUrlShortenService.h  MyUrlShortenService_server.skeleton.cpp  social_network_types.cpp  social_network_types.h
socialNetwork/MyServices/gen-py/social_network/: MyUrlShortenService-remote  MyUrlShortenService.py  __init__.py  ttypes.py
socialNetwork/MyServices/mythrift/: MyTMemoryBuffer.h  MyThriftMessage.cpp  MyThriftMessage.h  definitions.h  mythrift.cpp  mythrift.h
socialNetwork/MySrc/: .gitignore  CMakeLists.txt  my_social_network.thrift
socialNetwork/MySrc/FakeServices/FakeComposePostService/: CMakeLists.txt  FakeComposePostService.cpp
socialNetwork/MySrc/MyCommon/: CMakeLists.txt  CerebrosProcessor.h  ClientPoolMap.h  FunctionClientMap.h  FunctionClientMapHelper.h  MagicBreakPoint.h  MyClientPool.h  MyGenericClient.h  MyLock.h  MyProcessorEventHandler.cpp  MyProcessorEventHandler.h  MyTMemoryBuffer.cpp  MyTMemoryBuffer.h  MyThriftClient.h  NebulaClientPool.h  NebulaThriftProcessor.cpp  NebulaThriftProcessor.h  PostPSendStage.cpp  PostPSendStage.fwd.h  PostPSendStage.h  PrePRecvStage.cpp  PrePRecvStage.fwd.h  PrePRecvStage.h  RandomGenerator.cpp  RandomGenerator.h  ServStage.cpp  ServStage.h  concurrentqueue.h  core_schedule.cpp  core_schedule.h  logger.h  rd_pgmap.h  stopwatch.h  utils.h
socialNetwork/MySrc/MyServices/: CMakeLists.txt
socialNetwork/MySrc/MyServices/ComposePostService/: CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp
socialNetwork/MySrc/MyServices/MyComposePostService/: CMakeLists.txt  MyComposePostHandler.h  MyComposePostService.cpp
socialNetwork/MySrc/MyServices/MySocialGraphService/: CMakeLists.txt  MySocialGraphHandler.h  MySocialGraphService.cpp
socialNetwork/MySrc/MyServices/MyUniqueIdService/: CMakeLists.txt  MyUniqueIdHandler.h  MyUniqueIdService.cpp  MyUniqueIdService.old.cpp
socialNetwork/MySrc/MyServices/MyUserService/: CMakeLists.txt  MyUserService.cpp
socialNetwork/MySrc/MyServices/SimpleService/: CMakeLists.txt  MyUniqueIdHandler.h  SimpleHandler.h  SimpleService.cpp  UniqueIdHandler.h
socialNetwork/MySrc/MyServices/SimpleUniqueIdService/: CMakeLists.txt  SimpleUniqueIdHandler.h  SimpleUniqueIdService.cpp
socialNetwork/MySrc/MyServices/SocialGraphService/: CMakeLists.txt  SocialGraphHandler.h  SocialGraphService.cpp
socialNetwork/MySrc/MyServices/UniqueIdService/: CMakeLists.txt  CerbUniqueIdService.cpp  UniqueIdHandler.h  UniqueIdService.cpp
socialNetwork/MySrc/MyServices/UserService/: CMakeLists.txt  MyUserHandler.h  MyUserService.cpp
socialNetwork/MySrc/gen-cpp/: CMakeLists.txt  ComposePostService.cpp  ComposePostService.h  FakeComposePostService.cpp  FakeComposePostService.fwd.h  FakeComposePostService.h  FakeComposePostService_server.skeleton.cpp  FakeHomeTimelineService.cpp  FakeHomeTimelineService.h  FakeHomeTimelineService_server.skeleton.cpp  FakeMediaService.cpp  FakeMediaService.h  FakeMediaService_server.skeleton.cpp  FakeMemcached.cpp  FakeMemcached.h  FakeMongo.cpp  FakeMongo.h  FakePostStorageService.cpp  FakePostStorageService.h  FakePostStorageService_server.skeleton.cpp  FakeRabbitmq.cpp  FakeRabbitmq.h  FakeRabbitmq_server.skeleton.cpp  FakeRedis.cpp  FakeRedis.h  FakeRedis_server.skeleton.cpp  FakeSocialGraphService.cpp  FakeSocialGraphService.h  FakeSocialGraphService_server.skeleton.cpp  FakeTextService.cpp  FakeTextService.h  FakeTextService_server.skeleton.cpp  FakeUniqueIdService.cpp  FakeUniqueIdService.h  FakeUniqueIdService_server.skeleton.cpp  FakeUrlShortenService.cpp  FakeUrlShortenService.h  FakeUrlShortenService_server.skeleton.cpp  FakeUserMentionService.cpp  FakeUserMentionService.h  (+53 more)
socialNetwork/gen-cpp/: ComposePostService.cpp  ComposePostService.h  ComposePostService_server.skeleton.cpp  HomeTimelineService.cpp  HomeTimelineService.h  HomeTimelineService_server.skeleton.cpp  MediaService.cpp  MediaService.h  MediaService_server.skeleton.cpp  MyComposePostService.cpp  MyComposePostService.h  MyComposePostService_server.skeleton.cpp  MyTextService.cpp  MyTextService.h  MyUniqueIdService.cpp  MyUniqueIdService.h  MyUniqueIdService_server.skeleton.cpp  MyUrlShortenService.cpp  MyUrlShortenService.h  PostStorageService.cpp  PostStorageService.h  PostStorageService_server.skeleton.cpp  SocialGraphService.cpp  SocialGraphService.h  SocialGraphService_server.skeleton.cpp  TextService.cpp  TextService.h  TextService_server.skeleton.cpp  UniqueIdService.cpp  UniqueIdService.h  UniqueIdService_server.skeleton.cpp  UrlShortenService.cpp  UrlShortenService.h  UrlShortenService_server.skeleton.cpp  UserMentionService.cpp  UserMentionService.h  UserMentionService_server.skeleton.cpp  UserService.cpp  UserService.h  UserService_server.skeleton.cpp  (+3 more)
socialNetwork/gen-py/social_network/: ComposePostService.py  HomeTimelineService-remote  HomeTimelineService.py  MediaService-remote  MediaService.py  MyComposePostService-remote  MyComposePostService.py  MyUniqueIdService-remote  MyUniqueIdService.py  PostStorageService-remote  PostStorageService.py  (+13 more)
socialNetwork/src/: CMakeLists.txt
socialNetwork/src/MyServices/MyTextService/: CMakeLists.txt  MyTextService.cpp
socialNetwork/src/MyUniqueIdService/: CMakeLists.txt  MyUniqueIdHandler.h  MyUniqueIdService.cpp
socialNetwork/src/MyUrlShortenService/: CMakeLists.txt  MyUrlShortenHandler.h
socialNetwork/src/TestUniqueId/: CMakeLists.txt  FakeComposePost.cpp  RequestGen.cpp  TestClientPool.h  TestFunction.cpp  TestThriftClient.h  UniqueIdHandler.h  UniqueIdService.cpp
(+30 files in other folders)
