

# add_subdirectory(TextService)
# add_subdirectory(UserService)
# add_subdirectory(SocialGraphService)
# add_subdirectory(WriteHomeTimelineService)
# add_subdirectory(PostStorageSerivce)
# add_subdirectory(UserTimelineService)
# add_subdirectory(ComposePostService)
# add_subdirectory(UserMentionService)
# add_subdirectory(UrlShortenService)
# add_subdirectory(MediaService)
# add_subdirectory(HomeTimelineService)

# My Services
add_subdirectory(MyUniqueIdService)
add_subdirectory(MyComposePostService)

# Fake Services
# add_subdirectory(FakeComposePostService)